# EchoResQ

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  TROUBLESHOOTING.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml  download_whisper_medium.py  install_dependencies.py  main.py  phase3_validator.py  pyproject.toml  requirements.txt  setup.ps1  test_whisper_transcribe.py  unicode_fix.py
.github/workflows/: ci.yml
WORKING_FILES/: PERFORMANCE_IMPROVEMENTS.md  PHASE1_OPTIMIZATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  analysis_pipeline.py  app_minimal.py  app_streamlit.py  app_streamlit_optimized.py  async_pipeline.py  cli.py  config.yaml  enhanced_test_runner.py  gui.py  main.py  run_benchmarks.py  test_phase1_optimizations.py  test_streamlit_optimization.py  validate.py
WORKING_FILES/benchmarks/: performance_profiler.py  stress_test.py
WORKING_FILES/modules/: audio_preprocessing.py  config_manager.py  distress_mapper.py  emotion_audio.py  emotion_text.py  enhanced_logger.py  env_config.py  fusion_engine.py  in_memory_audio.py  keyword_detector.py  logger.py  memory_management.py  model_loader.py  model_loader_optimized.py  model_loader_original.py  model_manager.py  model_optimization.py  real_time_performance_monitor.py  smart_batch_processing.py  sound_event_detector.py  speech_to_text.py  streaming_audio.py  visualization_dashboard.py
WORKING_FILES/tests/: bench_parallel.py  edge_case_tests.py  stress_test_suite.py  test_denoise.py  test_pipeline.py  test_pipeline_full.py
logs/: system.txt
